<resources>
    <string name="app_name">MyQuizApp</string>
    <string name="my_quiz_app">My Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="submit">SUBMIT</string>
    <string name="result">RESULT</string>
    <string name="congratulations">Congratulations!</string>
    <string name="finish">FINISH</string>
</resources>