<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/quizappbg"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".ResultActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:id="@+id/result"
        android:textColor="@color/white"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="326dp"
        android:layout_marginTop="15dp"
        android:contentDescription="Image"
        android:src="@drawable/thophy" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/congratulations"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/res_name"
        tools:text="Denis"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/score"
        android:gravity="center"
        tools:text="Your score is 0 out of 9"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:backgroundTint="@color/white"
        android:id="@+id/finish"
        />

</LinearLayout>